# rust-bas-learn

./: .gitignore  Cargo.toml  README.md  file.out  file.txt  file_copy.out  test.xml
src/: _mod10_dymic_type_1_init_1.rs  _mod10_dymic_type_2_return_value_1.rs  _mod11_function_10_recursion_1.rs  _mod11_function_1_return_value_1.rs  _mod11_function_2_with_out_return_value_1.rs  _mod11_function_3_mult_return_value_1.rs  _mod11_function_4_with_out_param_1.rs  _mod11_function_5_array_param_1.rs  _mod11_function_6_out_array_param_1.rs  _mod11_function_7_in_out_array_param_1.rs  _mod11_function_8_variable_param_1.rs  _mod11_function_9_optional_param_1.rs  _mod12_lambda_10_currying_1.rs  _mod12_lambda_11_recursion_1.rs  _mod12_lambda_12_memoization_1.rs  _mod12_lambda_1_one_param_1.rs  _mod12_lambda_2_mult_param_1.rs  _mod12_lambda_3_with_out_return_value_1.rs  _mod12_lambda_4_function_as_param_1.rs  _mod12_lambda_5_void_function_as_param_1.rs  _mod12_lambda_6_function_as_return_value_1.rs  _mod12_lambda_7_mult_operators_1.rs  _mod12_lambda_8_capture_variables_1.rs  _mod12_lambda_9_modify_capture_variables_1.rs  _mod13_mult_thread_1_start_1.rs  _mod13_mult_thread_2_start_waiting_1.rs  _mod13_mult_thread_3_async_call_1.rs  _mod13_mult_thread_4_sync_blocking_1.rs  _mod13_mult_thread_5_async_waiting_1.rs  _mod13_mult_thread_6_passing_variables_1.rs  _mod14_exception_10_throw_panic_1.rs  _mod14_exception_1_catch_all_exception_1.rs  _mod14_exception_2_catch_specific_exception_1.rs  _mod14_exception_3_throw_exception_1.rs  _mod14_exception_4_re_throw_exception_1.rs  (+297 more)
src/serde/: mod.rs  (+3 more)
(+32 files in other folders)
