[package]
name = "rust_bas_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hex = "0.4.3"
env_logger = "0.9"
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "1.11.0"
rand = "0.9.0-alpha.1"
regex = "1.10.4"
chrono = "0.4.38"
rustils = "0.1.23"
itertools = "0.13.0"
strum = "0.26.2"
strum_macros = "0.26.4"
