[package]
name = "rust_bas_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0"
hex = "0.4.3"
env_logger = "0.11.3"
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.8.3"
rand = "0.9.0-alpha.1"
regex = "1.10.4"
chrono = "0.4.38"
rustils = "0.1.23"
itertools = "0.13.0"
strum = "0.26.2"
strum_macros = "0.26.4"
futures = "0.3.30"
serde_derive = "1.0"
serde-xml-rs = "0.6.0"
simple-xml-builder = "1.1.0"
zip = "2.1.3"
starknet = "0.10.0"
axum = { version = "0.7.5" }
axum_session = {version = "0.14.0"}
sqlx = { version = "0.7.2", features = [
    "macros",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
axum_session_sqlx = { version = "0.1.1",features = ["sqlite"]  }
serde_json_any_key = "2.0.0"
num = "0.4.3"
